# devLauncher

./: .gitignore  README.md  dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/: bump-version.mjs
.github/workflows/: release.yml
src/: App.tsx  ansi.ts  api.ts  constants.ts  env.ts  sequences.ts  sqlTypes.ts  styles.css  types.ts  update.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BranchModal.tsx  ColorPicker.tsx  Console.tsx  CustomActionManager.tsx  DbConnectionModal.tsx  DbTableDataView.tsx  DbTableSchemaView.tsx  DbWorkspaceView.tsx  EnvModal.tsx  GeneralSequenceModal.tsx  PackageLinkModal.tsx  ProjectRow.tsx  SequenceManager.tsx  Setup.tsx  StartCommandModal.tsx  TaskQueue.tsx
